@@ -155,9 +155,7 @@ class tx_seminars_Mapper_EventTest extends Tx_Phpunit_TestCase {
 
 		/** @var tx_seminars_Model_Event $model */
 		$model = $this->fixture->find($uid);
-		self::assertTrue(
-			$model->getPlaces()->first() instanceof tx_seminars_Model_Place
-		);
+		self::assertInstanceOf(Tx_Seminars_Model_Place::class, $model->getPlaces()->first());
 	}
 
 	/**
