@@ -50,9 +50,7 @@ class tx_seminars_Mapper_PlaceTest extends Tx_Phpunit_TestCase {
 	 * @test
 	 */
 	public function findWithUidReturnsPlaceInstance() {
-		self::assertTrue(
-			$this->fixture->find(1) instanceof tx_seminars_Model_Place
-		);
+		self::assertInstanceOf(Tx_Seminars_Model_Place::class, $this->fixture->find(1));
 	}
 
 	/**
@@ -63,7 +61,7 @@ class tx_seminars_Mapper_PlaceTest extends Tx_Phpunit_TestCase {
 			'tx_seminars_sites', array('title' => 'Nice place')
 		);
 
-		/** @var tx_seminars_Model_Place $model */
+		/** @var Tx_Seminars_Model_Place $model */
 		$model = $this->fixture->find($uid);
 		self::assertEquals(
 			'Nice place',
