@@ -21,14 +21,14 @@
  * @author Niels Pardon <mail@niels-pardon.de>
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
-class tx_seminars_Model_PlaceTest extends Tx_Phpunit_TestCase {
+class Tx_Seminars_Model_PlaceTest extends Tx_Phpunit_TestCase {
 	/**
-	 * @var tx_seminars_Model_Place
+	 * @var Tx_Seminars_Model_Place
 	 */
 	private $fixture;
 
 	protected function setUp() {
-		$this->fixture = new tx_seminars_Model_Place();
+		$this->fixture = new Tx_Seminars_Model_Place();
 	}
 
 	///////////////////////////////
